--- a/src/index.html
+++ b/src/index.html
@@ -56,9 +56,9 @@
             s.parentNode.insertBefore(hm, s);
         })();
     </script>
-    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/highlight.js/9.5.0/highlight.min.js"></script>
-    <script src="https://cdn.bootcss.com/markdown-it/8.3.1/markdown-it.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/8.3.1/markdown-it.min.js"></script>
     <script type="text/javascript" src="/static/wilonblog.min.js"></script>
 </body>
 
