--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,18 @@
 </head>
 
 <body>
-    <a href="https://github.com/wilon/wilon.github.io" title="王伟龙的Github" target="_blank" rel="nofollow" class="github-corner">
-        <svg width="50" height="50" viewBox="0 0 250 250" style="fill:#E1E1E1; color:#000; position: absolute; top: 0; border: 0; right: 0;"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg>
+    <a href="https://github.com/wilon/wilon.github.io" title="王伟龙的Github" target="_blank" rel="nofollow"
+        class="github-corner">
+        <svg width="50" height="50" viewBox="0 0 250 250"
+            style="fill:#E1E1E1; color:#000; position: absolute; top: 0; border: 0; right: 0;">
+            <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
+            <path
+                d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
+                fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
+            <path
+                d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
+                fill="currentColor" class="octo-body"></path>
+        </svg>
     </a>
     <header class="header">
         <a href="http://wilon.github.io" title="王伟龙的微笔记" class="logo icon-logo">
@@ -26,9 +36,11 @@
             <div class="box">
                 <span class="info" id="tooltip">拖动自动复制</span> &nbsp;|&nbsp;&nbsp;
                 <span class="info" id="info"></span>
-                <a href="http://weibo.com/wgwg105" title="王伟龙的微博" target="_blank" rel="nofollow">微博</a> &nbsp;|&nbsp;&nbsp;
+                <a href="http://weibo.com/wgwg105" title="王伟龙的微博" target="_blank" rel="nofollow">微博</a>
+                &nbsp;|&nbsp;&nbsp;
                 <a href="https://yeuk.github.io/ebook/" title="ebook" target="_blank">ebook</a> &nbsp;|&nbsp;&nbsp;
-                <a href="https://wilon.github.io/jquery-cheatsheet/" title="Jquery Doc" target="_blank" rel="nofollow">JqueryDoc</a>
+                <a href="https://wilon.github.io/jquery-cheatsheet/" title="Jquery Doc" target="_blank"
+                    rel="nofollow">JqueryDoc</a>
             </div>
         </div>
     </header>
@@ -49,16 +61,16 @@
     <script type="text/javascript">
         var dataUrl = "/static/wilonblog.min.json";
         var _hmt = _hmt || [];
-        (function() {
+        (function () {
             var hm = document.createElement("script");
             hm.src = "//hm.baidu.com/hm.js?0435db52f55373800840f04657369845";
             var s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(hm, s);
         })();
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/8.3.1/markdown-it.min.js"></script>
+    <script src="/static/jquery.1.12.4.min.js"></script>
+    <script src="/static/highlight.9.5.0.min.js"></script>
+    <script src="/static/markdown-it.8.3.1.min.js"></script>
     <script type="text/javascript" src="/static/wilonblog.min.js"></script>
 </body>
 
